[project]
name = "onep-exporter"
version = "0.1.2"
description = "Export 1Password vaults to JSON/Markdown and create local backups"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "eric" }]
dependencies = ["rich>=13.0", "textual>=0.50"]

[project.scripts]
"onep-exporter" = "onep_exporter.__main__:main"
